src/App.css
/* ... */
.switchInput {
  font-size: 12px;
}

/* 

Modal

*/

.modal__button {
  display: none;
  margin-left: 16px;
}

/* 

Home

*/

.home__container {
  overflow: hidden;
  position: relative;
  min-width: 100vw;
  min-height: 100vh;

  display: flex;
  justify-content: center;
  align-items: center;
}

.background-image--wrapper {
  position: absolute;
  top: -100px;
  left: -200px;
  right: -200px;
  bottom: -100px;
}

.background-image {
  filter: contrast(1.1);
  width: 100%;
  height: 100%;
  object-fit: cover;

  z-index: -1;
}

.home__info--wrapper {
  z-index: 100;
}

.home__title {
  font-weight: 500;
  font-size: 30px;
  color: #111;
}

.home__description {
  font-weight: 500;
  font-size: 72px;
  color: #111;
}

.projects__title,
.resume__title {
  padding-top: 200px;
  margin-bottom: 200px;
  font-weight: 500;
  font-size: 100px;
  color: #111;
  overflow: hidden;
}

.projects__title {
  text-align: center;
}

.secret {
  position: absolute;
  height: 3px;
  width: 3px;
  top: 80px;
  left: 0;
}

/* 

About

*/

.about__title {
  padding-top: 200px;
  margin-bottom: 100px;
  font-weight: 500;
  font-size: 100px;
  color: #111;
  overflow: hidden;
}

.about__para {
  font-size: 2rem;
  line-height: 2;
}

.about__title--tech {
  font-size: 60px;
  font-weight: 500;
  margin: 150px;
  white-space: nowrap;
}

/* language box */

.language__container {
  max-width: 1000px;
  margin: 0 auto;
  display: grid;
  gap: 100px;
  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
  justify-items: center;
}

.language__image {
  position: absolute;
  width: 50px;
  height: 50px;
}

.language {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100px;
  width: 100px;
  border-radius: 30px;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
  overflow: hidden;
}

.language__title {
  position: absolute;
  font-size: 16px;
}

/* 

Projects

*/

.projects {
  position: relative;
  width: 100%;
  display: grid;
  gap: 50px;
  grid-template-columns: 1fr 1fr;
}

.project {
  border-radius: 12px;
  overflow: hidden;
  width: 100%;
  display: flex;
  min-height: 619px;
}

.project:hover .project__img {
  transform: scale(1.07) !important;
}

.project__img--wrapper {
  position: relative;
  overflow: hidden;
  font-size: 0;
  line-height: 0;
  width: 50%;
}

.project__img {
  transition: transform 300ms ease-in-out;
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
}

.project__languages--wrapper {
  pointer-events: none;
  display: flex;
  justify-content: flex-start;
  gap: 8px;
  align-items: center;
  z-index: 1000;
  position: absolute;
  bottom: 4px;
  left: 0;
  height: 30px;
  width: 100%;
  padding: 0 8px;
}

.project__language {
  font-size: 0.8rem;
  background-color: #111;
  color: white;
  padding: 10px;
  border-radius: 50px;
}

.project__info {
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: space-between;
  padding: 40px;
  width: 50%;
}

.project--viewport-trigger {
  position: absolute;
  top: 0;
  right: 0;
  height: 3px;
  width: 3px;
}

.project-buttons--wrapper {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 16px;
}

.projectsBtn {
  outline: none;
  border: none;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  color: white;
  text-decoration: none;
  background-color: #33b9de;
  font-size: 1.3rem;
  padding: 8px 16px;
  border-radius: 8px;
  /* min-width: 129.22px; */
  text-align: center;
}

.projectsBtn--black {
  /* grid-column: 2 / 3; */
  background-color: rgb(51, 51, 51);
  /* min-width: 163.63px; */
}

.bg--gray {
  background-color: rgb(14, 57, 72);
}

.projectsBtn--gray {
  grid-row: 1;
  grid-column: 1 / 3;
  background-color: rgb(14, 57, 72);
  /* min-width: 163.63px; */
}
projectsBtn--black .project__title {
  font-size: 48px;
  font-weight: 500;
}

.project__para {
  white-space: pre-line;
  text-align: justify;
  line-height: 1.75;
  margin: 24px 0;
}

.project__more-info--wrapper {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(68, 68, 68, 0.5);
  z-index: 1000;
  display: flex;
  align-items: center;
  justify-content: center;
}

.project__more-info {
  position: relative;
  border-radius: 20px;
  background-color: white;
  width: 100%;
  max-width: 1300px;
  height: 90vh;
  margin: 0 64px;
  padding: 64px 32px 32px 32px;
  overflow-x: hidden;
  overflow-y: scroll;
  /* overflow: hidden; */
}

.project__more-info > div {
  /* width: 100%; */
  display: flex;
  gap: 16px;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  /* overflow-x: hidden;
  overflow-y: scroll; */
}

.project__more-info ul {
  list-style-type: disc;
  list-style-position: inside;
}

.project__more-info > div > p:first-of-type > img {
  width: 100%;
}

.closeBtn--more-info {
  cursor: pointer;
  font-size: 2rem;
  position: absolute;
  top: 16px;
  right: 16px;
}

/*

Resume

*/

.resume__container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.pdf--wrapper {
  /* background-color: white; */
  width: 100%;
  aspect-ratio: 0.863;
  margin: 0 auto;
  max-width: 1300px;
}

.pdfDownloadBtn {
  text-decoration: none;
  color: black;
  font-size: 1.7rem;
  padding: 8px 12px;
  border-radius: 12px;
  transition-duration: 0.3s;

  display: inline-flex;
  align-items: center;
  margin: 8px;
}

.downloadBtn-arrow {
  color: black;
  margin-left: 8px;
  transition-duration: 0.3s;
}

.pdfDownloadBtn:hover {
  color: white;
  background-color: #33b9de;
  box-shadow: 0 4px 6px hsla(0, 0%, 0%, 0.2);
}

.pdfDownloadBtn:active {
  filter: brightness(0.9);
  box-shadow: 0 1px 3px hsla(0, 0%, 0%, 0.2);
}

.pdfDownloadBtn:hover .downloadBtn-arrow {
  color: white;
  transform: rotate(90deg);
}
/* ... */

